--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "bootstrap": "^4.6.2",
+    "bootswatch": "^5.2.2",
     "ngx-bootstrap": "^9.0.0",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^16.0.1",
